# ResearchVault-RAG-Knowledge-Assistant

./: .env.example  .gitignore  LICENSE  README.md
backend/: alembic.ini  pyproject.toml
backend/app/: config.py  main.py
backend/app/core/: chroma_client.py  deps.py  exceptions.py  logging.py
backend/app/db/: base.py  enums.py  models.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: fd8f166993a0_initial_schema.py
backend/app/ingestion/: arxiv_client.py  embedding.py  indexer.py  metadata_writer.py  pdf_downloader.py  pdf_parser.py  pipeline.py  utils.py
backend/app/ingestion/chunkers/: __init__.py  base.py  fixed_size.py  paragraph.py  parent_child.py  section_aware.py
backend/app/llm/: generation.py  prompts.py  router.py
backend/app/llm/providers/: base.py  gemini_provider.py  openai_provider.py
backend/app/memory/: history.py  preferences.py  recommender.py
backend/app/retrieval/: fusion.py  keyword_search.py  representative.py  reranker.py  retriever.py  vector_store.py
backend/app/routers/: chat.py  collections.py  compare.py  health.py  history.py  notes.py  papers.py  preferences.py  search.py
backend/app/schemas/: chat.py  citation.py  collection.py  compare.py  document.py  note.py  preferences.py  search.py
backend/app/services/: bootstrap.py  chat_service.py  collections_service.py  compare_service.py  notes_service.py  papers_service.py  search_service.py
backend/app/tests/unit/: test_chunkers.py  test_fusion.py  test_generation.py  test_pdf_parser.py
docker/: docker-compose.yml
frontend/: index.html  (+5 more)
(+20 files in other folders)
