[project]
name = "researchvault-backend"
version = "0.1.0"
description = "ResearchVault: Personal Research Knowledge Assistant - FastAPI backend"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "openai>=1.40",
    "grpcio>=1.60,<2.0",
    "google-genai>=1.0",
    "chromadb>=0.5",
    "pymupdf>=1.24",
    "pymupdf4llm>=0.0.10",
    "rapidfuzz>=3.9",
    "sentence-transformers>=3.0",
    "httpx>=0.27",
    "feedparser>=6.0",
    "tenacity>=8.5",
    "numpy>=1.26",
    "tiktoken>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "jupyter>=1.0",
    "pandas>=2.2",
    "matplotlib>=3.9",
]

[tool.setuptools.packages.find]
include = ["app*"]
